--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -20,7 +20,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.428"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        >
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -28,101 +29,104 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/textView4"
+                android:id="@+id/txt_red"
                 android:layout_width="100dp"
                 android:layout_height="60dp"
                 android:layout_weight="1"
-                android:text="@string/alpha" />
-
-            <SeekBar
-                android:id="@+id/sbrAlpha"
-                android:layout_width="220dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:max="255"
-                android:progress="0" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="61dp"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/textView3"
-                android:layout_width="100dp"
-                android:layout_height="60dp"
-                android:layout_weight="1"
-                android:text="@string/blue" />
-
-            <SeekBar
-                android:id="@+id/sbrBlue"
-                android:layout_width="220dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:max="255"
-                android:progress="0" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="61dp"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/textView2"
-                android:layout_width="100dp"
-                android:layout_height="60dp"
-                android:layout_weight="1"
-                android:text="@string/green" />
-
-            <SeekBar
-                android:id="@+id/sbrGreen"
-                android:layout_width="220dp"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:max="255"
-                android:progress="0" />
-
-        </LinearLayout>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="61dp"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/textView"
-                android:layout_width="100dp"
-                android:layout_height="60dp"
-                android:layout_weight="1"
-                android:text="@string/red" />
+                android:text="@string/red"
+                android:textSize="24sp" />
 
             <SeekBar
                 android:id="@+id/sbrRed"
                 android:layout_width="220dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1"
-                android:max="255"
-                android:progress="0" />
+                android:progress="0"
+                android:max="255"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="61dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/txt_green"
+                android:layout_width="100dp"
+                android:layout_height="60dp"
+                android:layout_weight="1"
+                android:text="@string/green"
+                android:textSize="24sp"/>
+
+            <SeekBar
+                android:id="@+id/sbrGreen"
+                android:layout_width="220dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:progress="0"
+                android:max="255" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="61dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/txt_blue"
+                android:layout_width="100dp"
+                android:layout_height="60dp"
+                android:layout_weight="1"
+                android:text="@string/blue"
+                android:textSize="24sp" />
+
+            <SeekBar
+                android:id="@+id/sbrBlue"
+                android:layout_width="220dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:progress="0"
+                android:max="255"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="61dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/txt_alpha"
+                android:layout_width="100dp"
+                android:layout_height="60dp"
+                android:layout_weight="1"
+                android:text="@string/alpha"
+                android:textSize="24sp"  />
+
+            <SeekBar
+                android:id="@+id/sbrAlpha"
+                android:layout_width="220dp"
+                android:layout_height="match_parent"
+                android:layout_weight="1"
+                android:progress="0"
+                android:max="255" />
 
         </LinearLayout>
 
         <FrameLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@mipmap/paisaje">
+            android:background="@mipmap/nature">
+
             <View
-                android:id="@+id/vieColors"
+                android:id="@+id/viewColors"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="#80808080" />
+                android:background="#80808080"/>
+
         </FrameLayout>
 
     </LinearLayout>
 
-
 </androidx.constraintlayout.widget.ConstraintLayout>
-
